<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#F4DEE5"
        android:gravity="center"
        android:text="@string/candidates"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_height="269dp">

        <RadioButton
            android:id="@+id/radioOne"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#FE6161"
            android:buttonTint="@color/white"
            android:text="@string/candidate_1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioTwo"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#FE6161"
            android:text="@string/candidate_2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioThree"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#FE6161"
            android:text="@string/candidate_3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioFour"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#FE6161"
            android:text="@string/candidate_4"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_vote"
        android:layout_width="240dp"
        android:layout_height="92dp"
        android:background="#4CAF50"
        android:text="@string/vote"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="80dp"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp" />

</LinearLayout>